@@ -1,10 +1,0 @@
-#include <stdio.h>
-
-int foo(){
-    printf("I am foo\n");
-}
-
-int main(){
-    foo();
-    return 0;
-}
