@@ -1,6 +1,0 @@
-#include <stdio.h>
-
-int main(){
-   printf("hello world in C Programming Language\n");
-   return 0; 
-}
