@@ -1,11 +1,0 @@
-#include <stdio.h>
-
-int main()
-{
-    int a, b;
-    printf("Bir sayi giriniz : ");
-    scanf("%x", &a);
-    printf("a = %d\n", a);
-
-    return 0;
-}
