@@ -1,13 +1,0 @@
-#include <stdio.h>
-
-int main()
-{
-    int a;
-    int b;
-
-    printf("enter two numers a and b:");
-    scanf("%d%d", &a, &b);
-    printf("a = %d, b = %d\n", a, b);
-
-    return 0;
-}
