@@ -1,3 +1,7 @@
+2024-08-10  hwpplayer1  <hwpplayer1@debian>
+
+	* c-basic/C.pdf: Dersler C Temel kursundan itibaren yeniden başlatıldı. 
+
 2024-07-26  hwpplayer1  <hwpplayer1@debian>
 
 	* c-basic/C.pdf: Fonksiyonların Parametre Değişkenleri page 27
